# wishWhisper_bot

./: .pre-commit-config.yaml  __init__.py  config.py  main.py  pyproject.toml
app/: background_task.py  depends.py  route.py  shemas.py
app/models/: __init__.py  database.py  user_models.py  wish_models.py
app/static/css/: main.css  main.scss  wish.css
app/static/js/: gsap.min.js  main.js  tg-web-app.js  wish.js
app/templates/: 404.html  add-wish.html  base.html  list-wish.html  main.html
bot/: __init__.py  main.py  middleware.py
bot/handlers/: contact_handler.py  start_handlers.py
bot/keyboards/: buttons.py
migrations/: env.py
migrations/versions/: 2cf3c77ee314_adding_chat_id_for_user.py  4a2b682a35aa_delete_phone_number.py  752cacb5ae6a_add_user_mood.py  77718db325a8_update_relation.py  af5984e87154_add_wish_model.py  d339f1bb85c7_adding_user_model.py
