[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = ""
authors = ["Alex Remnev <alexremnev2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
pydantic-settings = "^2.2.1"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
jinja2 = "^3.1.3"
alembic-postgresql-enum = "^1.1.2"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
flake8 = "^7.0.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
